test/files/neg/implicit-ambiguous.check
implicit-ambiguous.scala:10: error: Could not prove Int =!= Int
  implicitly[Int =!= Int]
            ^
one error found
